--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -629,17 +629,33 @@ section.main-content {
 
 /* ==== MEDIA QUERIES ==== */
 
+@media screen and (min-width : 992px) {
+  .navbar-brand {
+    padding: 0;
+  }
+}
+
 @media screen and (max-width : 991px) {
 	#instructor .container {
 		background: rgba(255,255,255,0.8);
 		padding: 20px;
 	}
+
+  .navbar-brand {
+    padding: 0;
+  }
 }
 
 @media screen and (max-width : 768px) {
 	.logo {
 		width: 50%;
 	}
+
+  .navbar-brand {
+    padding: 0;
+    margin-left: 15px;
+  }
+
 
 	#optin p {
 		margin: 0 0 10px;
@@ -656,15 +672,9 @@ section.main-content {
 }
 
 @media screen and (max-width : 568px) {
-	#instructor .num {
-		height: 100px;
-		width: 100px;
-		font-size: 22px;
-	}
-
-	#instructor .num span {
-		font-size: 16px;
-	}
+  .navbar-brand {
+    padding-left: 15px;
+  }
 
   .resource {
     width: 100%;
@@ -673,13 +683,89 @@ section.main-content {
 }
 
 body {
-  margin-top: 125px;
+  margin-top: 95px;
 }
+
+/* ==== HEADER ==== */
 
 .navbar-green {
   background-color: #17dbb0;
-  height: 125px;
+  height: 95px;
 }
+
+.navbar-right {
+  margin-top: 20px;
+  font-size: 20px;
+}
+
+.navbar-toggle {
+  margin-top: 25px;
+  margin-right: 25px;
+}
+
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:focus,
+.navbar-inverse .navbar-nav > .active > a:hover {
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.navbar-inverse .navbar-nav {
+  cursor: pointer;
+  position: relative;
+}
+
+.submenu {
+  background-color: rgba(16,150,120, 0.8);
+  border-bottom: 1px solid #000;
+  height: 200px;
+  position: absolute;
+  width: 102%;
+  top: 95px;
+}
+
+.related-articles-section {
+  height: 100%;
+}
+
+.submenu-recommend-header {
+  color: #fff;
+  text-align: right;
+  top: 70%;
+}
+
+.submenu-related-article {
+  background: #fff;
+  border: 1px solid #000;
+  cursor: pointer;
+  height: 100%;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.submenu-related-article:hover {
+  border: 2px solid #000;
+}
+
+.first-related-article {
+  margin-left: 10%;
+}
+
+.submenu-subcategories {
+  list-style: none;
+  padding-top: 20px;
+  color: #c3c3c3;
+}
+
+.submenu-subcategory-option {
+  cursor: pointer;
+}
+
+.submenu-subcategory-option:hover {
+  color: #fff;
+}
+
+/* ==== FOOTER ==== */
 
 footer {
 	background: white;
