--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -644,6 +644,10 @@ section.main-content {
   .navbar-brand {
     padding: 0;
   }
+
+  .navbar-inverse .navbar-nav > li > a {
+    font-size: medium;
+  }
 }
 
 @media screen and (max-width : 768px) {
@@ -712,16 +716,17 @@ body {
 
 .navbar-inverse .navbar-nav {
   cursor: pointer;
-  position: relative;
 }
 
 .submenu {
-  background-color: rgba(16,150,120, 0.8);
+  background-color: rgba(100, 180, 171, 0.8);
   border-bottom: 1px solid #000;
-  height: 200px;
-  position: absolute;
   width: 102%;
   top: 95px;
+}
+
+.submenu .row+.row {
+  margin-top: 0px;
 }
 
 .related-articles-section {
@@ -739,22 +744,25 @@ body {
   border: 1px solid #000;
   cursor: pointer;
   height: 100%;
-  margin-left: 5px;
-  margin-right: 5px;
+  position: relative;
+  width: 95%;
+}
+
+.related-article-holder {
+  width: 100%;
 }
 
 .submenu-related-article:hover {
   border: 2px solid #000;
 }
 
-.first-related-article {
-  margin-left: 10%;
+.submenu-header {
+  color: #fff;
 }
 
 .submenu-subcategories {
   list-style: none;
-  padding-top: 20px;
-  color: #c3c3c3;
+  color: #666;
 }
 
 .submenu-subcategory-option {
@@ -763,6 +771,53 @@ body {
 
 .submenu-subcategory-option:hover {
   color: #fff;
+}
+
+.panel-group {
+  margin-bottom: 0px;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+}
+
+.panel-group .panel+.panel {
+  margin-top: 0px;
+}
+
+.panel {
+  background-color: transparent;
+  border: 0px;
+}
+
+.navbar .btn {
+	color: #000;
+}
+
+.navbar .form-control {
+	background-color: #16d0a7;
+	border-bottom: 1px solid #fff;
+	border-top: 0;
+	border-left: 0;
+	border-right: 0;
+	color: #fff;
+}
+
+.article-thumbnail-info {
+  background: rgba(250,250,250,0.6);
+  bottom: 0;
+  font-size: small;
+  padding: 3px;
+  position: absolute;
+  width: 100%;
+}
+
+.article-thumbnail-title {
+  margin-bottom: 0;
+}
+
+.article-thumbnail-author {
+  font-size: 0.6em;
+  margin-bottom: 10px;
 }
 
 /* ==== FOOTER ==== */
