--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -399,42 +399,6 @@ section.main-content {
 	color: white;
 }
 
-#instructor {
-	background: white url('../img/brad-elvis.png') 90% -10px no-repeat;
-}
-
-#instructor h2 {
-	margin: 0 0 20px;
-}
-
-#instructor .num {
-	display: table;
-	font-size: 30px;
-	font-weight: bold;
-	color: white;
-	line-height: 24px;
-	height: 140px;
-	width: 140px;
-	text-align: center;
-	background: #dd5638;
-	-webkit-border-radius: 100%;
-	-moz-border-radius: 100%;
-	border-radius: 100%;
-	-webkit-font-smoothing: antialiased;
-	text-rendering: optimizelegibility;
-}
-
-#instructor .num .num-content {
-	display: table-cell;
-	vertical-align: middle;
-}
-
-#instructor .num span {
-	display: block;
-	font-size: 20px;
-	font-weight: normal;
-}
-
 #kudos {
 	text-align: center;
 }
@@ -636,11 +600,6 @@ section.main-content {
 }
 
 @media screen and (max-width : 991px) {
-	#instructor .container {
-		background: rgba(255,255,255,0.8);
-		padding: 20px;
-	}
-
   .navbar-brand {
     padding: 0;
   }
@@ -651,15 +610,41 @@ section.main-content {
 }
 
 @media screen and (max-width : 768px) {
-	.logo {
-		width: 50%;
-	}
+  .logo {
+    width: 50%;
+  }
 
   .navbar-brand {
     padding: 0;
     margin-left: 15px;
   }
 
+  .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+    background-color: #17dbb0;
+  }
+
+  .navbar-form {
+  	padding: 20px;
+  }
+
+  .navbar-header {
+    position: relative;
+  }
+
+  .navbar-collapse {
+    position: absolute;
+    width: 100%;
+    top: 94px;
+  }
+
+  .nav > li > a {
+    display: initial;
+  }
+
+  .submenu {
+    position: absolute;
+    top: 273px !important
+  }
 
 	#optin p {
 		margin: 0 0 10px;
@@ -721,7 +706,6 @@ body {
 .submenu {
   background-color: rgba(100, 180, 171, 0.8);
   border-bottom: 1px solid #000;
-  width: 102%;
   top: 95px;
 }
 
