--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -609,6 +609,11 @@ section.main-content {
   }
 }
 
+@media screen and (min-width : 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
 @media screen and (max-width : 768px) {
   .logo {
     width: 50%;
@@ -658,6 +663,41 @@ section.main-content {
 		width: 48%;
 		margin-right: 2%;
 	}
+
+  .non-mobile-menu {
+    display: none;
+  }
+
+  .navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
+    max-height: none;
+  }
+
+  .panel {
+    margin-bottom: 0;
+  }
+
+  .panel-default > .panel-heading {
+    background-color: transparent;
+    color: inherit;
+    border: 0;
+  }
+
+  .panel-title > a:link {
+    color: #9d9d9d;
+  }
+
+  .panel-title > a:hover {
+    color: #fff;
+  }
+
+  .panel-body {
+    font-size: small;
+    background-color: #16d0a7;
+  }
+
+  .article-thumbnail-title {
+    text-align: center;
+  }
 }
 
 @media screen and (max-width : 568px) {
