--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -621,9 +621,73 @@ section.main-content {
 
 /* ==== MEDIA QUERIES ==== */
 
-@media screen and (min-width : 992px) {
+@media screen and (min-width : 1300px) {
   .navbar-brand {
     padding: 0;
+  }
+
+  .hero-image-container {
+    width: 1500px;
+    height: 750px;
+    overflow: hidden;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .hero-image {
+    width: 100%;
+  }
+
+  .article-info {
+    background-color: rgba(250,250,250,0.7);
+    bottom: 15%;
+    color: #565656;
+    padding-left: 5%;
+    padding-right: 5%;
+    position: absolute;
+    width: 100%;
+  }
+
+  .article-title {
+    font-size: 45px;
+  }
+
+  .article-metadata {
+    font-size: 25px;
+  }
+}
+
+@media screen and (min-width : 992px) and (max-width : 1299px) {
+  .navbar-brand {
+    padding: 0;
+  }
+
+  .hero-image-container {
+    height: 400px;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+  }
+
+  .hero-image {
+    position: absolute;
+    top: -150px;
+    width: 100%;
+  }
+
+  .article-info {
+    background-color: rgba(250,250,250,0.7);
+    bottom: 15%;
+    color: #565656;
+    padding-left: 10%;
+    padding-right: 10%;
+    position: absolute;
+    width: 100%;
+  }
+
+  .article-title {
+    font-size: 30px;
   }
 }
 
@@ -634,6 +698,30 @@ section.main-content {
 
   .navbar-inverse .navbar-nav > li > a {
     font-size: medium;
+  }
+
+  .hero-image-container {
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+  }
+
+  .hero-image {
+    width: 100%;
+  }
+
+  .article-info {
+    background-color: rgba(250,250,250,0.7);
+    bottom: 15%;
+    color: #565656;
+    padding-left: 10%;
+    padding-right: 10%;
+    position: absolute;
+    width: 100%;
+  }
+
+  .article-title {
+    font-size: 25px;
   }
 }
 
@@ -726,6 +814,30 @@ section.main-content {
   .article-thumbnail-title {
     text-align: center;
   }
+
+  .hero-image-container {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+  }
+
+  .hero-image {
+    width: 100%;
+  }
+
+  .article-info {
+    background-color: rgba(250,250,250,0.7);
+    bottom: 15%;
+    color: #565656;
+    padding-left: 10%;
+    padding-right: 10%;
+    position: absolute;
+    width: 100%;
+  }
+
+  .article-title {
+    font-size: 20px;
+  }
 }
 
 @media screen and (max-width : 568px) {
@@ -736,6 +848,39 @@ section.main-content {
   .resource {
     width: 100%;
     margin-right: 0;
+  }
+
+  .hero-image-container {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+  }
+
+  .hero-image {
+    display: block;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: initial;
+    width: initial;
+  }
+
+  .article-info {
+    background-color: rgba(250,250,250,0.7);
+    bottom: 15%;
+    color: #565656;
+    padding-left: 10%;
+    padding-right: 10%;
+    position: absolute;
+    width: 100%;
+  }
+
+  .article-title {
+    font-size: 15px;
+  }
+
+  .article-metadata {
+    font-size: 10px;
   }
 }
 
