--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -350,10 +350,18 @@ section.main-content {
 	margin: 7px 0 0 0;
 }
 
-#homepage-content {
+#center-panel-content {
+  background-color: #fff;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  height: 100%;
+  margin-bottom: -80px;
+  margin-top: -80px;
+  padding-bottom: 100px;
+  padding-top: 80px;
 }
 
-.homepage-content-header {
+.center-panel-content-header {
   -webkit-font-smoothing: antialiased;
   font-size: 3em;
   font-weight: bold;
@@ -362,11 +370,11 @@ section.main-content {
   line-height: 1.1;
 }
 
-#homepage-content hr {
+#center-panel-content hr {
   border-color: #c3c3c3;
 }
 
-#homepage-content .input-group button {
+#center-panel-content .input-group button {
   background-color: #c3c3c3;
 }
 
@@ -511,20 +519,16 @@ section.main-content {
 /* ==== BLOG ==== */
 
 .post, .widget, #comments {
-	position: relative;
-	border: solid 1px #ddd;
 	background: white;
 	margin: 0 0 40px;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
+	position: relative;
+  padding-top: 25px;
 }
 
 .post header,
 .post .post-excerpt,
 .post .post-body,
 #comments .comments-wrap {
-	padding: 20px;
 }
 
 .post header h3 {
@@ -629,6 +633,14 @@ section.main-content {
 	border-top: solid 1px #eee;
 }
 
+.comment-button {
+  background-color: #17dbb0;
+  color: #fff;
+  font-weight: normal !important;
+  line-height: inherit !important;
+  padding: 0 15px;
+}
+
 /* === RESOURCES === */
 
 .resource {
@@ -644,7 +656,6 @@ section.main-content {
 /* === WIDGETS === */
 
 .widget {
-	padding: 20px;
 }
 
 .widget h4 {
@@ -670,13 +681,20 @@ section.main-content {
 
 /* ==== MEDIA QUERIES ==== */
 
+@media screen and (min-width : 1500px) {
+  .giant-screen-settings {
+    margin: 0 auto;
+    width: 45%;
+  }
+}
+
 @media screen and (min-width : 1300px) {
   .navbar-brand {
     padding: 0;
   }
 
   .hero-image-container {
-    width: 1500px;
+    width: 1300px;
     height: 750px;
     overflow: hidden;
     display: block;
@@ -821,10 +839,6 @@ section.main-content {
 		margin: 0 0 10px;
 	}
 
-	#featurette iframe {
-		height: 240px;
-	}
-
 	.resource {
 		width: 48%;
 		margin-right: 2%;
@@ -911,6 +925,18 @@ section.main-content {
   .footer-content {
     padding-left: 0;
   }
+
+  .user-avatar {
+    display: none;
+  }
+
+  .related-article-thumbnail {
+    margin-top: 0px !important;
+  }
+
+  .comment-email-disclaimer {
+    font-size: small;
+  }
 }
 
 @media screen and (max-width : 568px) {
@@ -956,6 +982,10 @@ section.main-content {
     font-size: 10px;
   }
 
+  .article-content {
+    padding-left: 0 !important;
+  }
+
   .site-footer {
     margin-bottom: 80px;
   }
@@ -970,11 +1000,15 @@ section.main-content {
     margin-top: 20px;
     padding-top: 20px;
   }
+
+  .center-panel-content-header {
+    font-size: 2em;
+  }
 }
 
 @media screen and (max-width : 400px) {
-  .homepage-content-header {
-    font-size: 2.5em;
+  .center-panel-content-header {
+    font-size: 1.5em;
   }
 }
 
@@ -1016,12 +1050,50 @@ body {
   top: 95px;
 }
 
+.post-submenu {
+  background-color: rgba(100, 180, 171, 1);
+  border-bottom: 1px solid #000;
+  top: 95px;
+}
+
 .submenu .row+.row {
   margin-top: 0px;
 }
 
-.related-articles-section {
+.recommended-articles-section {
   height: 100%;
+}
+
+#related-articles-section {
+  background-color: #fff;
+}
+
+#related-articles-section hr {
+  border-color: #c3c3c3;
+  margin-bottom: 0;
+}
+
+.related-articles-content {
+  padding: 10px;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+#related-articles-section .col-xs-4 {
+  padding: 0;
+}
+
+.related-article-image {
+  max-height: 200px;
+}
+
+.related-article-thumbnail-container {
+  max-height: 175px;
+  overflow: hidden;
+}
+
+.related-article-thumbnail {
+  margin-top: -20px;
 }
 
 .submenu-recommend-header {
@@ -1037,6 +1109,15 @@ body {
   height: 100%;
   position: relative;
   width: 95%;
+}
+
+.panel-body .col-xs-4 {
+  padding: 0;
+}
+
+.panel-body .row {
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .submenu-related-article a {
@@ -1123,6 +1204,76 @@ body {
   margin-bottom: 10px;
 }
 
+#article-content {
+  padding-top: 10px;
+}
+
+#article-content p {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  line-height: 2;
+}
+
+.article-header {
+  padding: 20px;
+}
+
+.article-content {
+  padding-left: 20%;
+}
+
+.article-content-image-container {
+  border: 1px solid #ddd;
+  background-color: #eee;
+  padding: 10px;
+  -moz-box-shadow: inset 0 0 5px #bbb;
+  -webkit-box-shadow: inset 0 0 5px #bbb;
+  box-shadow: inset 0 0 5px #bbb;
+}
+
+.article-content-image {
+  max-width: 580px;
+  margin: 0 auto;
+  display: block;
+  border: 1px solid #999;
+}
+
+.prev-next-navigation .glyphicon {
+  font-size: 25px;
+  color: #10d9a7;
+}
+
+.prev-next-link-description {
+  display: inline-block;
+}
+
+.prev-next-article {
+  cursor: pointer;
+}
+
+.prev-next-direction {
+  color: #bdbdbd;
+}
+
+#read-next .col-xs-4 {
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 10px;
+}
+
+#read-next .related-article-thumbnail-container {
+}
+
+.read-next-articles {
+  padding-left: 10px;
+}
+
+.read-next-article-title {
+  font-size: 15px;
+  padding-top: 10px;
+  color: #777;
+}
+
 /* ==== FOOTER ==== */
 
 footer {
@@ -1151,6 +1302,10 @@ footer h5 {
 
 footer img {
   max-width: 255px;
+}
+
+footer li {
+  font-size: 20px;
 }
 
 .footer-logo {
