Removes reference to "course" and adjusts search font color

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -859,6 +859,10 @@ section.main-content {
   	padding: 20px;
   }
 
+  .navbar .form-control {
+  	color: #999 !important;
+  }
+
   .navbar-header {
     position: relative;
   }
